Framework/Base/Main/Error-Logs/Log_5-13-2021_1-34-6.txt
There was an uncaught exception error. The details can be found below.

C:\Users\jorda\Desktop\Bots\EpixBot\commands\Administration\post.js:33
                        break;
                        ^^^^^

SyntaxError: Illegal break statement
    at wrapSafe (internal/modules/cjs/loader.js:979:16)
    at Module._compile (internal/modules/cjs/loader.js:1027:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1092:10)
    at Module.load (internal/modules/cjs/loader.js:928:32)
    at Function.Module._load (internal/modules/cjs/loader.js:769:14)
    at Module.require (internal/modules/cjs/loader.js:952:19)
    at require (internal/modules/cjs/helpers.js:88:18)
    at Walker.<anonymous> (C:\Users\jorda\Desktop\Bots\EpixBot\handlers\Main\Startup\startup.js:18:33)
    at Walker.emit (events.js:315:20)
    at addChunk (internal/streams/readable.js:309:12)